fix: shift welcome heading downward

--- a/src/style.less
+++ b/src/style.less
@@ -165,6 +165,8 @@ main {
 
         hgroup {
             font-size: 2em;
+            margin: 0.25em 0 -0.25em;
+
             h1 {
                 display: flex;
                 margin: 0 0 -0.25em;
